k8s/10-mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: skillpulse
spec:
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: skillpulse
spec:
  serviceName: mysql
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            exec:
              #command: [mysqladmin, ping, -h, localhost]
              #command: ["sh", "-c", "mysqladmin ping -h localhost -u root -p$MYSQL_ROOT_PASSWORD"]     This is correct, but sometimes $MYSQL_ROOT_PASSWORD may not expand reliably in probe context

              command:
                - sh
                - -c
                - |
                  mysqladmin ping -h localhost -u root -p"${MYSQL_ROOT_PASSWORD}"

            initialDelaySeconds: 20
            periodSeconds: 5
            timeoutSeconds: 3
      volumes:
        - name: init
          configMap:
            name: mysql-init
  volumeClaimTemplates: 
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        #storageClassName: standard         This line of code is imp, if we dont mention k8s will automatically use standard which is default one
        resources:
          requests:
            storage: 1Gi
