k8s/20-backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: skillpulse
  labels:
    app: backend

spec:
  type: NodePort

  selector:
    app: backend

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      nodePort: 30080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: skillpulse

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: sonali0910/skillpulse-backend:bb22099db7cbedc3de07d8caad1986c19e1bf064

          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          resources:
            requests:
              cpu: 100m
              memory: 64Mi

            limits:
              cpu: 500m
              memory: 128Mi

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 10
